# ASG-FU

./: README.md
ASG-FU_CIFAR/: main.py
ASG-FU_CIFAR/clients/Group/: pyproject.toml
ASG-FU_CIFAR/clients/Group/group/: client_app.py  server_app.py  task.py
ASG-FU_CIFAR/global-server/: pyproject.toml
ASG-FU_CIFAR/global-server/global_server/: client_app.py  server_app.py  task.py
ASG-FU_MNIST/: main.py
ASG-FU_MNIST/clients/Group/group/: client_app.py  server_app.py  task.py
ASG-FU_MNIST/global-server/: pyproject.toml
ASG-FU_MNIST/global-server/global_server/: client_app.py  server_app.py  task.py
