[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "global-server"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.13.1",
    "flwr-datasets[vision]>=0.3.0",
    "torch==2.2.1",
    "torchvision==0.17.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "server"

[tool.flwr.app.components]
serverapp = "global_server.server_app:app"
clientapp = "global_server.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 1
fraction-fit = 1
local-epochs = 5

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes=200